--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ h2 {
 }
 
 .completed {
- font-family: "Comic Sans MS", cursive, sans-serif;
+ font-family: "Comic Sans MS";
 }
 
 #tasks .completed {
